--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "aws-cdk": "2.1030.0",
+    "esbuild": "^0.25.11",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.1030.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.215.0",
     "@aws-cdk/aws-lambda-nodejs": "1.204.0",
+    "aws-cdk-lib": "2.215.0",
     "constructs": "^10.0.0"
   }
 }
